--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,14 @@
     <version>1.339</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
-  
+
+  <developers>
+      <developer>
+        <id>vjuranek</id>
+        <name>Vojtech Juranek</name>
+      </developer>
+  </developers>
+
   <artifactId>disk-usage</artifactId>
   <packaging>hpi</packaging>
   <name>Hudson disk-usage plugin</name>
