--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,6 @@
   <artifactId>disk-usage</artifactId>
   <packaging>hpi</packaging>
   <name>Hudson disk-usage plugin</name>
-  <version>0.10</version>
+  <version>0.11-SNAPSHOT</version>
   <url>http://wiki.hudson-ci.org/display/HUDSON/Disk+Usage+Plugin</url>
-
-  <scm>
-    <connection>scm:svn:https://guest@svn.dev.java.net/svn/hudson/tags/disk-usage-0.10</connection>
-    <developerConnection>scm:svn:https://svn.dev.java.net/svn/hudson/tags/disk-usage-0.10</developerConnection>
-    <url>https://hudson.dev.java.net/source/browse/hudson/tags/disk-usage-0.10</url>
-  </scm>
 </project>
