--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <artifactId>disk-usage</artifactId>
   <packaging>hpi</packaging>
   <name>Hudson disk-usage plugin</name>
-  <version>0.13</version>
+  <version>0.13-SNAPSHOT</version>
   <url>http://wiki.jenkins-ci.org/display/HUDSON/Disk+Usage+Plugin</url>
 
   <developers>
