--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
 
   <artifactId>disk-usage</artifactId>
   <packaging>hpi</packaging>
-  <name>Hudson disk-usage plugin</name>
+  <name>Jenkins disk-usage plugin</name>
   <version>0.14-SNAPSHOT</version>
-  <url>http://wiki.jenkins-ci.org/display/HUDSON/Disk+Usage+Plugin</url>
+  <url>http://wiki.jenkins-ci.org/display/JENKINS/Disk+Usage+Plugin</url>
 
   <developers>
     <developer>
