--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
       <artifactId>plexus-utils</artifactId>
       <version>1.5.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.jenkins-ci.main</groupId>
+      <artifactId>maven-plugin</artifactId>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
   
   <build>
