--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
     <dependency>
       <groupId>org.jenkins-ci.main</groupId>
       <artifactId>maven-plugin</artifactId>
+      <version>1.409</version>
       <scope>compile</scope>
     </dependency>
   </dependencies>
