Configure time out for calculation disk usage of workspace

--- a/src/main/resources/hudson/plugins/disk_usage/DiskUsageProjectActionFactory/global.properties
+++ b/src/main/resources/hudson/plugins/disk_usage/DiskUsageProjectActionFactory/global.properties
@@ -21,3 +21,4 @@
 # THE SOFTWARE.
 
 OverallGraphHistoryLength=Overall graph history length (days)
+TimeoutWorkspace=Timeout to calculate size for a single project's workspace (minutes).
