--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
 
   <developers>
     <developer>
-      <id>vjuranek</id>
-      <name>Vojtech Juranek</name>
+      <id>lvotypko</id>
+      <name>Lucie Votypkova</name>
     </developer>
   </developers>
 
