Fix backward compatibility, fix concurent modification exception and make timeout workspace configurable.

--- a/pom.xml
+++ b/pom.xml
@@ -40,12 +40,12 @@
       <artifactId>plexus-utils</artifactId>
       <version>1.5.15</version>
     </dependency>
-    <dependency>
+   <!-- <dependency>
       <groupId>org.jenkins-ci.main</groupId>
       <artifactId>maven-plugin</artifactId>
       <version>1.447</version>
       <scope>compile</scope>
-    </dependency>
+    </dependency>-->
   </dependencies>
   
     <repositories>
