Display next execution time and add buttom for builds, jobs and workspaces.

--- a/src/main/resources/hudson/plugins/disk_usage/DiskUsagePlugin/index.properties
+++ b/src/main/resources/hudson/plugins/disk_usage/DiskUsagePlugin/index.properties
@@ -20,4 +20,4 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 # THE SOFTWARE.
 
-Interval.Message=Disk usage is calculated each {0} minutes. If you want to trigger the calculation now, click on the button.
+Interval.Message=Disk usage of {0} will be calculated in {1} minutes.
