Better sheduling automatic calculation.

--- a/src/main/resources/hudson/plugins/disk_usage/DiskUsagePlugin/index.properties
+++ b/src/main/resources/hudson/plugins/disk_usage/DiskUsagePlugin/index.properties
@@ -20,4 +20,4 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 # THE SOFTWARE.
 
-Interval.Message=Disk usage of {0} will be calculated in {1} minutes.
+Interval.Message=Next Disk usage calculation of {0} will be in {1}.
