--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,24 @@
       <version>1.447</version>
       <scope>compile</scope>
     </dependency>-->
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>1.9.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-core</artifactId>
+      <version>1.4.12</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-api-mockito</artifactId>
+      <version>1.4.12</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   
     <repositories>
@@ -54,7 +72,7 @@
             <url>http://repo.jenkins-ci.org/public/</url>
         </repository>
     </repositories>
-
+    
     <pluginRepositories>
         <pluginRepository>
             <id>repo.jenkins-ci.org</id>
