--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>1.460</version>
+    <version>1.500</version>
   </parent>
 
   <artifactId>disk-usage</artifactId>
@@ -39,6 +39,11 @@
       <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-utils</artifactId>
       <version>1.5.15</version>
+    </dependency>
+    <dependency>
+        <groupId>org.jenkins-ci.plugins</groupId>
+        <artifactId>mailer</artifactId>
+        <version>1.8</version>
     </dependency>
    <!-- <dependency>
       <groupId>org.jenkins-ci.main</groupId>
