--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,12 @@
   </distributionManagement>
 
   <dependencies>
+	  <dependency>
+		  <groupId>org.hamcrest</groupId>
+		  <artifactId>hamcrest-core</artifactId>
+		  <version>1.3</version>
+		  <scope>test</scope>
+	  </dependency>
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
       <artifactId>plexus-utils</artifactId>
@@ -64,6 +70,12 @@
       <version>1.4.12</version>
       <scope>test</scope>
     </dependency>
+	<dependency>
+	  <groupId>com.google.guava</groupId>
+	  <artifactId>guava</artifactId>
+	  <version>14.0</version>
+	</dependency>
+
   </dependencies>
   
     <repositories>
