--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <artifactId>disk-usage</artifactId>
   <packaging>hpi</packaging>
   <name>Jenkins disk-usage plugin</name>
-  <version>0.28-SNAPSHOT</version>
+  <version>0.28</version>
   <url>http://wiki.jenkins-ci.org/display/JENKINS/Disk+Usage+Plugin</url>
 
   <developers>
@@ -24,7 +24,7 @@
     <connection>scm:git:git://github.com/jenkinsci/disk-usage-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/disk-usage-plugin.git</developerConnection>
     <url>http://github.com/jenkinsci/disk-usage-plugin</url>
-    <tag>HEAD</tag>
+    <tag>disk-usage-0.28</tag>
   </scm>
 
   <distributionManagement>
