--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
         <artifactId>mailer</artifactId>
         <version>1.8</version>
     </dependency>
+    <dependency>
+        <groupId>org.jenkins-ci.plugins</groupId>
+        <artifactId>matrix-project</artifactId>
+        <version>1.6</version>
+        <scope>test</scope>
+    </dependency>
    <!-- <dependency>
       <groupId>org.jenkins-ci.main</groupId>
       <artifactId>maven-plugin</artifactId>
