--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
         <version>1.6</version>
         <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>org.jenkins-ci.plugins</groupId>
+          <artifactId>jobConfigHistory</artifactId>
+          <version>2.16</version>
+          <scope>test</scope>
+      </dependency>
    <!-- <dependency>
       <groupId>org.jenkins-ci.main</groupId>
       <artifactId>maven-plugin</artifactId>
