--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,12 @@
           <version>2.16</version>
           <scope>test</scope>
       </dependency>
+      <dependency>
+          <groupId>org.jenkins-ci.plugins</groupId>
+          <artifactId>promoted-builds</artifactId>
+          <version>2.28</version>
+          <scope>test</scope>
+      </dependency>
    <!-- <dependency>
       <groupId>org.jenkins-ci.main</groupId>
       <artifactId>maven-plugin</artifactId>
@@ -76,6 +82,18 @@
       <version>1.4.12</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>org.jenkins-ci.plugins</groupId>
+          <artifactId>promoted-builds</artifactId>
+          <version>2.28</version>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.jenkins-ci.plugins</groupId>
+          <artifactId>promoted-builds</artifactId>
+          <version>2.28</version>
+          <scope>test</scope>
+      </dependency>
   </dependencies>
   
     <repositories>
