--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.jenkins-ci.plugins</groupId>
-    <artifactId>plugin</artifactId>
-    <version>1.580.3</version>
-  </parent>
+    <parent>
+        <groupId>org.jenkins-ci.plugins</groupId>
+        <artifactId>plugin</artifactId>
+        <version>2.29</version>
+    </parent>
 
-  <artifactId>disk-usage</artifactId>
-  <packaging>hpi</packaging>
-  <name>Jenkins disk-usage plugin</name>
-  <version>0.29-SNAPSHOT</version>
-  <url>http://wiki.jenkins-ci.org/display/JENKINS/Disk+Usage+Plugin</url>
+    <artifactId>disk-usage</artifactId>
+    <packaging>hpi</packaging>
+    <name>Jenkins disk-usage plugin</name>
+    <version>0.29-SNAPSHOT</version>
+    <url>http://wiki.jenkins-ci.org/display/JENKINS/Disk+Usage+Plugin</url>
+
+    <properties>
+        <jenkins.version>1.650</jenkins.version>
+    </properties>
+
 
   <developers>
     <developer>
@@ -92,6 +97,12 @@
           <groupId>org.jenkins-ci.plugins</groupId>
           <artifactId>promoted-builds</artifactId>
           <version>2.28</version>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
+          <groupId>com.github.olivergondza.dumpling</groupId>
+          <artifactId>dumpling</artifactId>
+          <version>2.2</version>
           <scope>test</scope>
       </dependency>
   </dependencies>
