--- a/pom.xml
+++ b/pom.xml
@@ -57,12 +57,12 @@
         <version>1.6</version>
         <scope>test</scope>
     </dependency>
-      <dependency>
+     <!-- <dependency>
           <groupId>org.jenkins-ci.plugins</groupId>
           <artifactId>jobConfigHistory</artifactId>
           <version>2.16</version>
           <scope>test</scope>
-      </dependency>
+      </dependency>-->
       <dependency>
           <groupId>org.jenkins-ci.plugins</groupId>
           <artifactId>promoted-builds</artifactId>
