--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>plugin</artifactId>
-        <version>2.29</version>
+        <version>3.0</version>
     </parent>
 
     <artifactId>disk-usage</artifactId>
@@ -14,7 +14,7 @@
     <url>http://wiki.jenkins-ci.org/display/JENKINS/Disk+Usage+Plugin</url>
 
     <properties>
-        <jenkins.version>1.650</jenkins.version>
+        <jenkins.version>1.625.3</jenkins.version>
     </properties>
 
 
@@ -42,9 +42,14 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.codehaus.plexus</groupId>
-      <artifactId>plexus-utils</artifactId>
-      <version>1.5.15</version>
+      <groupId>org.apache.ant</groupId>
+      <artifactId>ant</artifactId>
+      <version>1.9.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jenkins-ci.plugins</groupId>
+      <artifactId>script-security</artifactId>
+      <version>1.16</version>
     </dependency>
     <dependency>
         <groupId>org.jenkins-ci.plugins</groupId>
