Updates scm connection to use HTTPS instead of git
https://github.blog/2021-09-01-improving-git-protocol-security-github/

--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
   </developers>
 
   <scm>
-    <connection>scm:git:git://github.com/jenkinsci/disk-usage-plugin.git</connection>
+    <connection>scm:git:https://github.com/jenkinsci/disk-usage-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/disk-usage-plugin.git</developerConnection>
     <url>http://github.com/jenkinsci/disk-usage-plugin</url>
     <tag>HEAD</tag>
