--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
   <scm>
     <connection>scm:git:https://github.com/jenkinsci/disk-usage-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/disk-usage-plugin.git</developerConnection>
-    <url>http://github.com/jenkinsci/disk-usage-plugin</url>
+    <url>https://github.com/jenkinsci/disk-usage-plugin</url>
     <tag>HEAD</tag>
   </scm>
 
