--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>3.0</version>
+    <version>3.1</version>
   </parent>
 
   <artifactId>disk-usage</artifactId>
@@ -26,6 +26,10 @@
     <url>https://github.com/jenkinsci/disk-usage-plugin</url>
     <tag>HEAD</tag>
   </scm>
+
+  <properties>
+    <java.level>8</java.level>
+  </properties>
 
   <dependencies>
     <dependency>
