--- a/pom.xml
+++ b/pom.xml
@@ -63,31 +63,12 @@
     <plugins>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.16</version>
-        <executions>
-          <execution>
-            <id>default-test</id>
-            <phase>test</phase>
-            <goals>
-              <goal>test</goal>
-            </goals>
-            <configuration>
-              <systemProperties>
-                <property>
-                  <name>hudson.udp</name>
-                  <value>33849</value>
-                </property>
-              </systemProperties>
-              <reuseForks>false</reuseForks>
-              <forkCount>2</forkCount>
-            </configuration>
-          </execution>
-        </executions>
+        <version>3.0.0-M4</version>
         <configuration>
           <systemProperties>
             <property>
               <name>hudson.udp</name>
-              <value>33849</value>
+              <value>-1</value>
             </property>
           </systemProperties>
           <reuseForks>false</reuseForks>
