--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
     <dependency>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>mailer</artifactId>
-        <version>1.8</version>
+        <version>435.v79ef3972b_5c7</version>
     </dependency>
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
@@ -45,8 +45,8 @@
     </dependency>
     <dependency>
       <groupId>io.jenkins.plugins</groupId>
-      <artifactId>javax-mail-api</artifactId>
-      <version>1.6.2-8</version>
+      <artifactId>jakarta-mail-api</artifactId>
+      <version>2.0.1-2</version>
     </dependency>
   </dependencies>
 
