--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <artifactId>disk-usage</artifactId>
   <packaging>hpi</packaging>
   <name>Jenkins disk-usage plugin</name>
-  <version>1.2-SNAPSHOT</version>
+  <version>1.2</version>
   <url>https://github.com/jenkinsci/disk-usage-plugin</url>
 
   <developers>
@@ -24,7 +24,7 @@
     <connection>scm:git:https://github.com/jenkinsci/disk-usage-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/disk-usage-plugin.git</developerConnection>
     <url>https://github.com/jenkinsci/disk-usage-plugin</url>
-    <tag>HEAD</tag>
+    <tag>disk-usage-1.2</tag>
   </scm>
 
   <properties>
