--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
     <!-- https://www.jenkins.io/doc/developer/plugin-development/choosing-jenkins-baseline/ -->
     <jenkins.baseline>2.479</jenkins.baseline>
     <jenkins.version>${jenkins.baseline}.3</jenkins.version>
+    <jenkins-test-harness.version>2545.va_5c4d760c7ef</jenkins-test-harness.version>
   </properties>
 
   <dependencyManagement>
