Ban JUnit 4 imports
To prevent regressions when adding new tests, jenkinsci/plugin-pom#1178
introduced a new flag that enables a Maven Enforcer rule banning
org.junit.* imports while allowing org.junit.jupiter.*.

With this change, the build will fail if any org.junit.* imports are
introduced.

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
     <jenkins.baseline>2.479</jenkins.baseline>
     <jenkins.version>${jenkins.baseline}.3</jenkins.version>
     <jenkins-test-harness.version>2545.va_5c4d760c7ef</jenkins-test-harness.version>
+    <ban-junit4-imports.skip>false</ban-junit4-imports.skip>
   </properties>
 
   <dependencyManagement>
