Require 2.504.3 as minimum Jenkins version

--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 
   <properties>
     <!-- https://www.jenkins.io/doc/developer/plugin-development/choosing-jenkins-baseline/ -->
-    <jenkins.baseline>2.479</jenkins.baseline>
+    <jenkins.baseline>2.504</jenkins.baseline>
     <jenkins.version>${jenkins.baseline}.3</jenkins.version>
     <jenkins-test-harness.version>2545.va_5c4d760c7ef</jenkins-test-harness.version>
     <ban-junit4-imports.skip>false</ban-junit4-imports.skip>
@@ -40,7 +40,7 @@
       <dependency>
         <groupId>io.jenkins.tools.bom</groupId>
         <artifactId>bom-${jenkins.baseline}.x</artifactId>
-        <version>5054.v620b_5d2b_d5e6</version>
+        <version>5888.vd99c2b_38128d</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
