--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <artifactId>disk-usage</artifactId>
   <packaging>hpi</packaging>
   <name>Jenkins disk-usage plugin</name>
-  <version>1.4-SNAPSHOT</version>
+  <version>${revision}${changelist}</version>
   <url>https://github.com/jenkinsci/disk-usage-plugin</url>
 
   <developers>
@@ -21,13 +21,16 @@
   </developers>
 
   <scm>
-    <connection>scm:git:https://github.com/jenkinsci/disk-usage-plugin.git</connection>
-    <developerConnection>scm:git:git@github.com:jenkinsci/disk-usage-plugin.git</developerConnection>
-    <url>https://github.com/jenkinsci/disk-usage-plugin</url>
-    <tag>HEAD</tag>
+    <connection>scm:git:https://github.com/${gitHubRepo}.git</connection>
+    <developerConnection>scm:git:git@github.com:${gitHubRepo}.git</developerConnection>
+    <url>https://github.com/${gitHubRepo}</url>
+    <tag>${scmTag}</tag>
   </scm>
 
   <properties>
+    <revision>1.4</revision>
+    <changelist>-SNAPSHOT</changelist>
+    <gitHubRepo>jenkinsci/disk-usage-plugin</gitHubRepo>
     <!-- https://www.jenkins.io/doc/developer/plugin-development/choosing-jenkins-baseline/ -->
     <jenkins.baseline>2.504</jenkins.baseline>
     <jenkins.version>${jenkins.baseline}.3</jenkins.version>
